--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	</body>
 	<script>
 		let settvoice = document.getElementById("sett_audio");
-		let settvoice = new Audio('audio/sett.mp3');
+		let settvoice = new Audio('audio/sett.webp');
 		let ringtone = new Audio('audio/ring.mp3');
 		let icon = document.getElementById("icon");
 		let picture = document.getElementById("picture");
